[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/hud/hud.gd" id="1_hud"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hud")

[node name="TopBar" type="ColorRect" parent="."]
offset_right = 360.0
offset_bottom = 48.0
color = Color(0.02, 0.06, 0.12, 0.72)

[node name="ScoreLabel" type="Label" parent="TopBar"]
offset_left = 12.0
offset_top = 13.0
offset_right = 66.0
offset_bottom = 35.0
text = "SCORE"

[node name="ScoreValue" type="Label" parent="TopBar"]
offset_left = 66.0
offset_top = 13.0
offset_right = 108.0
offset_bottom = 35.0
text = "0"

[node name="LivesLabel" type="Label" parent="TopBar"]
offset_left = 136.0
offset_top = 13.0
offset_right = 176.0
offset_bottom = 35.0
text = "HP"

[node name="LivesValue" type="Label" parent="TopBar"]
offset_left = 176.0
offset_top = 13.0
offset_right = 216.0
offset_bottom = 35.0
text = "3"

[node name="BestLabel" type="Label" parent="TopBar"]
offset_left = 242.0
offset_top = 13.0
offset_right = 280.0
offset_bottom = 35.0
text = "BEST"

[node name="BestValue" type="Label" parent="TopBar"]
offset_left = 286.0
offset_top = 13.0
offset_right = 338.0
offset_bottom = 35.0
text = "0"

[node name="Message" type="Label" parent="."]
offset_left = 30.0
offset_top = 272.0
offset_right = 330.0
offset_bottom = 370.0
horizontal_alignment = 1
vertical_alignment = 1
text = ""

[node name="Flash" type="ColorRect" parent="."]
offset_right = 360.0
offset_bottom = 640.0
color = Color(1, 1, 1, 0)
mouse_filter = 2
